[FIX] Remove safe class overflow hidden

--- a/src/app/components/TabSelector/styles.module.scss
+++ b/src/app/components/TabSelector/styles.module.scss
@@ -51,6 +51,7 @@
   flex-grow: 1;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 
   &[data-visible='true'] {
     display: flex;
